# cloudreve3_flutter

./: .gitignore  build.sh  pubspec.yaml
.claude/: settings.json
.github/workflows/: android-preview.yml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
lib/: main.dart
lib/core/constants/: sort_options.dart  storage_keys.dart  sync_defaults.dart
lib/core/utils/: app_logger.dart  win_env.dart
lib/data/models/: file_model.dart  login_config_model.dart  share_model.dart  sync_config_model.dart  sync_event_model.dart  sync_status_model.dart  sync_task_model.dart  user_model.dart
lib/presentation/pages/auth/: captcha_challenge_page.dart  forgot_password_page.dart  login_page.dart  register_page.dart
lib/presentation/pages/files/: category_files_page.dart  files_page.dart
lib/presentation/pages/overview/: overview_page.dart
lib/presentation/pages/overview/widgets/: quick_access_grid.dart
lib/presentation/pages/preview/: cloudreve_file_app_page.dart
lib/presentation/pages/profile/widgets/: quick_functions_section.dart
lib/presentation/pages/settings/: app_settings_page.dart  quick_access_settings_page.dart  settings_page.dart
lib/presentation/pages/share/: share_link_page.dart
lib/presentation/pages/shell/: app_shell.dart
lib/presentation/pages/splash/: splash_page.dart
lib/presentation/pages/sync/: sync_log_viewer_page.dart  sync_page.dart  sync_page_android.dart  sync_settings_page.dart
lib/presentation/providers/: auth_provider.dart  file_manager_provider.dart  quick_access_provider.dart  sync_provider.dart  theme_provider.dart
lib/presentation/widgets/: announcement_dialog.dart  file_breadcrumb.dart  file_list_header.dart  sync_stats_card.dart  upload_progress_item.dart
lib/router/: app_router.dart
lib/services/: api_service.dart  auth_service.dart  captcha_service.dart  cloudreve_v3_compat.dart  desktop_service.dart  download_service.dart  remote_download_service.dart  storage_service.dart  sync_service.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: ffi.dart  ffi_types.dart  ffi_types.freezed.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
native/: Cargo.toml  frb.yaml
native/sync-android/: Cargo.toml
native/sync-android/src/: lib.rs
native/sync-core/: Cargo.toml
native/sync-core/src/: api_client.rs  conflict_resolver.rs  diff.rs  downloader.rs  errors.rs  event_handler.rs  event_sink.rs  file_lock.rs  frb_generated.rs  fs_scanner.rs  lib.rs  models.rs  server_error_code.rs  sync_db.rs  sync_engine.rs  transfer.rs  uploader.rs  utils.rs  worker.rs
native/sync-core/src/api/: ffi.rs  ffi_types.rs
native/sync-core/src/event_handler/: mod.rs  sse.rs
native/sync-core/src/platform/: fuse.rs  mod.rs  wcf.rs
native/sync-core/src/sync_engine/: album.rs  continuous_sync.rs  fuse.rs  initial_sync.rs  local_events.rs  mod.rs  remote_events.rs  wcf.rs
native/sync-core/src/worker/: mod.rs  pool.rs  worker_impl.rs
native/sync-linux/: Cargo.toml
native/sync-linux/src/: lib.rs
native/sync-windows/: Cargo.toml
native/sync-windows/src/: lib.rs
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: CMakeLists.txt
