[package]
name = "sync-android"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
# 不依赖 sync-core，避免循环依赖
jni = { version = "0.21", features = ["invocation"] }
thiserror = { workspace = true }
tracing = "0.1"
anyhow = { workspace = true }
tokio = { workspace = true }
async-trait = "0.1"

# 通用日志接口
log = "0.4"

# 仅在 Android 平台下生效的日志后端
[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15"
